--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "@nuxt/fonts": "^0.10.3",
         "nuxt": "^3.15.4",
         "vue": "latest",
         "vue-router": "latest"
+    },
+    "devDependencies": {
+        "@vueuse/nuxt": "^12.5.0",
+        "prettier": "^3.4.2"
     }
 }
